# sdl2_template

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
sdl_template/: CMakeLists.txt
sdl_template/lib/: CMakeLists.txt
sdl_template/lib/glad/: CMakeLists.txt
sdl_template/lib/glad/include/glad/: gl.h
sdl_template/src/: Main.cpp
